--- a/SpringREST/.classpath
+++ b/SpringREST/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/EmployeeServiceContract"/>
 	<classpathentry kind="var" path="3PTY_LOCATION/commons-logging-1.2.jar"/>
@@ -17,5 +18,7 @@
 	<classpathentry kind="var" path="3PTY_LOCATION/spring-web-4.3.2.RELEASE.jar"/>
 	<classpathentry kind="var" path="3PTY_LOCATION/spring-webmvc-4.3.2.RELEASE.jar"/>
 	<classpathentry kind="var" path="3PTY_LOCATION/sqljdbc42.jar"/>
+	<classpathentry kind="var" path="3PTY_LOCATION/junit-4.11.jar"/>
+	<classpathentry kind="var" path="3PTY_LOCATION/mockito-all-1.10.19.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
