--- a/SpringREST/build.gradle
+++ b/SpringREST/build.gradle
@@ -18,6 +18,8 @@ dependencies {
 	compile 'org.springframework:spring-webmvc:4.3.2.RELEASE'
 	compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.5'
 	compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.5'
+	compile group: 'junit', name: 'junit', version: '4.11'
+	compile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
 	compile project(":EmployeeServiceContract")
 }
 
