Adding SQLContext.xml to include SQL queries as String type spring bean.

--- a/SimpleSpringRestWAR/WebContent/WEB-INF/web.xml
+++ b/SimpleSpringRestWAR/WebContent/WEB-INF/web.xml
@@ -8,6 +8,7 @@
     <param-name>contextConfigLocation</param-name>
     <param-value>
        		 classpath*:META-INF/applicationContext.xml
+       		 classpath*:META-INF/SQLContext.xml
     	</param-value>
   </context-param>
   <servlet>
