Adding quartz job projects(3 new projects)

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,7 @@
 include ":EmployeeRepositoryService"
 include ":EmployeeServiceContract"
 include ":SpringREST"
+include ":SimpleRepositoryServiceContract"
+include ":SimpleRepositoryService"
+include ":QuartzJobSchedulerService"
 include ":SimpleSpringRestWAR"
