Adding uthentication module(Spring security)

--- a/SimpleSpringRestWAR/WebContent/WEB-INF/jdbc.properties
+++ b/SimpleSpringRestWAR/WebContent/WEB-INF/jdbc.properties
@@ -1,3 +1,5 @@
 jdbc.url=jdbc:sqlserver://localhost:1433;DatabaseName=AdventureWorks2014
+jdbcForAuth.url=jdbc:sqlserver://localhost:1433;DatabaseName=tanmoy
+jdbc.urlforquartz=jdbc:sqlserver://localhost:1433;DatabaseName=quartzDB
 jdbc.username=tintin
 jdbc.password=1234
