--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,5 @@ include ":SpringREST"
 include ":SimpleRepositoryServiceContract"
 include ":SimpleRepositoryService"
 include ":QuartzJobSchedulerService"
+include ":AuthModule"
 include ":SimpleSpringRestWAR"
