--- a/SimpleSpringRestWAR/.classpath
+++ b/SimpleSpringRestWAR/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
@@ -7,5 +8,9 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="var" path="3PTY_LOCATION/spring-beans-4.3.2.RELEASE.jar"/>
+	<classpathentry kind="var" path="3PTY_LOCATION/spring-context-4.3.2.RELEASE.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/AuthModule"/>
+	<classpathentry kind="var" path="3PTY_LOCATION/spring-core-4.3.2.RELEASE.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
