--- a/SimpleSpringRestWAR/WebContent/WEB-INF/web.xml
+++ b/SimpleSpringRestWAR/WebContent/WEB-INF/web.xml
@@ -4,13 +4,20 @@
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
+ 
   <context-param>
-    <param-name>contextConfigLocation</param-name>
-    <param-value>
-       		 classpath*:META-INF/applicationContext.xml
-       		 classpath*:META-INF/SQLContext.xml
-    	</param-value>
-  </context-param>
+        <param-name>contextClass</param-name>
+        <param-value>
+            org.springframework.web.context.support.AnnotationConfigWebApplicationContext
+        </param-value>
+    </context-param>
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>
+            com.tanmoy.RootConfig
+        </param-value>
+    </context-param>
+  
   <servlet>
     <servlet-name>restful</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
