added driverclassname in properties file.

--- a/SimpleSpringRestWAR/WebContent/WEB-INF/jdbc.properties
+++ b/SimpleSpringRestWAR/WebContent/WEB-INF/jdbc.properties
@@ -3,3 +3,4 @@ jdbcForAuth.url=jdbc:sqlserver://localhost:1433;DatabaseName=tanmoy
 jdbc.urlforquartz=jdbc:sqlserver://localhost:1433;DatabaseName=quartzDB
 jdbc.username=tintin
 jdbc.password=1234
+jdbc.driverclassname=com.microsoft.sqlserver.jdbc.SQLServerDriver
